dbus-scripts (2.1) unstable; urgency=low

  * Initial Maemo Leste import

 -- Merlijn Wajer <merlijn@wizzup.org>  Fri, 03 Jul 2020 01:30:03 +0200

dbus-scripts (2.0) unstable; urgency=low

  * Add V2 config, which includes D-Bus path, integer and boolean parameters.

 -- Matan Ziv-Av <matan@svgalib.org>  Fri, 29 Jan 2010 13:54:21 +0200

dbus-scripts (1.0+maemo-5) unstable; urgency=low

  * MUD build using revision {20091028}

 -- Graham Cobb <g+770@cobb.uk.net>  Tue, 27 Oct 2009 16:41:55 +0000
dbus-scripts (1.0-2) unstable; urgency=low

  * Tidy up object code.

 -- Graham Cobb <g+770@cobb.uk.net>  Sun,  7 Jan 2007 13:20:00 +0000

dbus-scripts (1.0-1) unstable; urgency=low

  * Initial Release.

 -- Graham Cobb <g+770@cobb.uk.net>  Fri,  5 Jan 2007 23:09:05 +0000
