@@ -1,2 +1,1 @@
-/etc/default/dbus-scripts
 /etc/dbus-scripts.d/dbus-scripts-example
