@@ -1,10 +1,0 @@
-# Defaults for dbus-scripts initscript
-# sourced by /etc/init.d/dbus-scripts
-# installed at /etc/default/dbus-scripts by the maintainer scripts
-
-#
-# This is a POSIX shell fragment
-#
-
-# Additional options that are passed to the Daemon.
-DAEMON_OPTS="--system"
