@@ -1,57 +1,24 @@
-#! /bin/sh
-#
-# dbus-scripts	Start and stop the dbus-scripts daemon
-#
+#!/sbin/openrc-run
+# Copyright 2020 Gentoo Authors
+# Distributed under the terms of the GNU General Public License v2
 
-PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
-DAEMON=/usr/sbin/dbus-scripts
-NAME=dbus-scripts
-DESC=dbus-scripts
+name="dbus-scripts daemon"
+description=""
+command=/usr/sbin/dbus-scripts
+command_args="--system"
 
-test -x $DAEMON || exit 0
+depend() {
+    need dbus
+}
 
-# Include dbus-scripts defaults if available
-if [ -f /etc/default/dbus-scripts ] ; then
-	. /etc/default/dbus-scripts
-fi
+start() {
+   ebegin "Starting dbus-scripts"
+   start-stop-daemon --start --background --quiet --exec $command -- $command_args
+   eend $?
+}
 
-set -e
-
-case "$1" in
-  start)
-	echo -n "Starting $DESC: "
-	start-stop-daemon --start --quiet --pidfile /var/run/$NAME.pid \
-	    	--background --make-pidfile \
-		--exec $DAEMON -- $DAEMON_OPTS
-	echo "$NAME."
-	;;
-  stop)
-	echo -n "Stopping $DESC: "
-	start-stop-daemon --stop --quiet --pidfile /var/run/$NAME.pid \
-		--exec $DAEMON
-	echo "$NAME."
-	;;
-  reload|restart|force-reload)
-	#
-	#	If the "reload" option is implemented, move the "force-reload"
-	#	option to the "reload" entry above. If not, "force-reload" is
-	#	just the same as "restart".
-	#
-	echo -n "Restarting $DESC: "
-	start-stop-daemon --stop --quiet --pidfile \
-		/var/run/$NAME.pid --exec $DAEMON
-	sleep 1
-	start-stop-daemon --start --quiet --pidfile /var/run/$NAME.pid \
-	    	--background --make-pidfile \
-	    --exec $DAEMON -- $DAEMON_OPTS
-	echo "$NAME."
-	;;
-  *)
-	N=/etc/init.d/$NAME
-	# echo "Usage: $N {start|stop|restart|reload|force-reload}" >&2
-	echo "Usage: $N {start|stop|restart|force-reload}" >&2
-	exit 1
-	;;
-esac
-
-exit 0
+stop() {
+   ebegin "Stopping dbus-scripts"
+   start-stop-daemon --stop --quiet --exec $command -- $command_args
+   eend $?
+}
