@@ -1,14 +1,0 @@
-#!/bin/sh
-if [ -e /sbin/initctl ]
-then
-# Using upstart
-  if /sbin/initctl --quiet start dbus-scripts
-  then
-    : ok
-  else
-    echo dbus-scripts not started -- assuming running on scratchbox
-  fi
-else
-# Using SysVinit
-  /etc/init.d/dbus-scripts start
-fi
